Inefficient fix for overlapping images during load in explore

--- a/ShowCase/static/css/base.css
+++ b/ShowCase/static/css/base.css
@@ -525,13 +525,14 @@ body::-webkit-scrollbar-thumb {
 
 .feed-bucket {
   width: 100%;
+  height: 350px;
   margin-bottom: 10px;
   color: rgba(0, 0, 0, 0.8);
 }
 
 .feed-bucket .bucket-picture {
     width: 100%;
-    height: 350px;
+    height: 100%;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
